<resources>
    <string name="app_name">Photo, Video Editor</string>
    <string name="saved">Saved</string>
    <string name="filter">Filter</string>
    <string name="effect">Effect</string>
    <string name="background">Background</string>
    <string name="crop">Crop</string>
    <string name="emoji">Emoji</string>
    <string name="text">Text</string>
    <string name="rotate">Rotate</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="collage">Collage</string>
    <string name="create_new">Create New</string>
    <string name="resources">Resources</string>
    <string name="see_all">See All</string>
    <string name="brush">Brush</string>
    <string name="edit_image">Edit Image</string>
    <string name="recently">Recently</string>
</resources>