<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".activity.ImageEditorActivity">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/image_view_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back" />

            <TextView
                android:id="@+id/text_view_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/saved"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photo_editor_view"
            android:layout_width="wrap_content"
            android:layout_height="440dp"
            android:layout_centerInParent="true" />

        <HorizontalScrollView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/filter"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_workspaces" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_effect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/effect"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_star" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/background"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_texture" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/crop"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_crop" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_emoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/emoji"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_emoji_emotions" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/text"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_text_fields" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/text_view_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/rotate"
                    android:textColor="#757474"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/ic_baseline_replay" />

            </LinearLayout>

        </HorizontalScrollView>
    </RelativeLayout>

    <include layout="@layout/layout_bottom_sheet_emoji_sticker" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
