<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/custom_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="23sp" />

        <ImageView
            android:padding="10dp"
            android:id="@+id/image_view_setting"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_settings" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:text="@string/create_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_view_video"
                        android:padding="20dp"
                        android:background="@drawable/custom_image_view_your_video"
                        android:src="@drawable/ic_baseline_movie"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"
                        android:text="@string/video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_view_image"
                        android:padding="20dp"
                        android:background="@drawable/custom_image_view_image"
                        android:src="@drawable/ic_baseline_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"
                        android:text="@string/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_view_collage"
                        android:padding="20dp"
                        android:background="@drawable/custom_image_view_collage"
                        android:src="@drawable/ic_baseline_dashboard"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"
                        android:text="@string/collage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout1"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:text="@string/resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:text="@string/see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableRightCompat="@drawable/ic_baseline_keyboard_arrow_right" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerCrop"
                    android:src="@drawable/dieu_anh_biet"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerCrop"
                    android:src="@drawable/noi_buon_dem_dong"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerCrop"
                    android:src="@drawable/lang_le_buong"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>